--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,9 @@
 	"onCreateCommand": "pip3 install --user -r requirements.txt",
 	"customizations": {
 	  "vscode": {
+		"settings": {
+			"jupyter.kernels.excludePythonEnvironments": ["/usr/bin/python3"]
+		},
 		"extensions": [
 		  "ms-toolsai.jupyter",
 		  "ms-python.python"
