Improved devcontainer envrionment and simplified requirements.txt.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,23 +4,31 @@
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:0-3.11",
-	"onCreateCommand": "pip3 install --user -r requirements.txt",
+	"onCreateCommand": "sudo apt update && sudo apt upgrade -y && pip3 install --upgrade pip && pip3 install --user -r requirements.txt",
 	"customizations": {
 	  "vscode": {
 		"settings": {
-			"jupyter.kernels.excludePythonEnvironments": ["/usr/bin/python3"]
+			"jupyter.kernels.excludePythonEnvironments": ["/usr/bin/python3"],
+			"remote.portsAttributes": {
+				"ipykernel_launcher": {"onAutoForward": "ignore"}
+			}
 		},
 		"extensions": [
+		  "-dbaeumer.vscode-eslint",
+		  "ms-python.python",
 		  "ms-toolsai.jupyter",
-		  "ms-python.python"
+		  "streetsidesoftware.code-spell-checker"
 		]
 	  }
-	}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip3 install --user -r requirements.txt",
+	// "postCreateCommand": "",
+
+	// Use 'postAttachCommand' to run commands on container startup.
+	// "postAttachCommand": ""
 
 }
