--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,15 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"name": "Python 3.11",
 	"image": "mcr.microsoft.com/devcontainers/python:0-3.11",
 	"onCreateCommand": "sudo apt update && sudo apt upgrade -y && pip3 install --upgrade pip && pip3 install --user -r requirements.txt",
 	"customizations": {
 	  "vscode": {
 		"settings": {
 			"jupyter.kernels.excludePythonEnvironments": ["/usr/bin/python3"],
-			"remote.portsAttributes": {
-				"ipykernel_launcher": {"onAutoForward": "ignore"}
-			}
+			"remote.autoForwardPorts": false,
+			"remote.restoreForwardedPorts": false
 		},
 		"extensions": [
 		  "-dbaeumer.vscode-eslint",
@@ -20,15 +18,7 @@
 		  "streetsidesoftware.code-spell-checker"
 		]
 	  }
-	}
+	},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "",
-
-	// Use 'postAttachCommand' to run commands on container startup.
-	// "postAttachCommand": ""
-
+	"postAttachCommand": "htop"
 }
